# MIREA_ADS

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml  requirements.txt  save_to_yadisk.py  tmp.py
Graph/: ABOUT_FILE_FMT.md  README.md  adj_m_to_adj_list.py  adj_m_to_adj_m.py  adj_m_to_edge_list.py  adj_m_to_inc_m.py  edge_list.txt  graph.py  matrix.txt  utils.py
Graph/1/: Graph_task1.docx  graph_task1.py
Graph/10/: Graph_10.docx  graph_task10.py  graph_task10.txt
Graph/100/: Graph_100.docx  graph_task100.json  graph_task100.py  graph_task100.txt
Graph/12/: Graph_12.docx  graph_edge_list12.txt  graph_matrix12.txt  graph_task12.json  graph_task12.py
Graph/13/: Graph_13.docx  graph_task13.json  graph_task13.py
Graph/17/: Graph_17.docx  graph_matrix.txt  graph_matrix17.txt  graph_task17.json  graph_task17.py
Graph/2/: Graph_2.docx  graph_task2.json  graph_task2.py
Graph/23/: Graph_23.docx  graph_task23.json  graph_task23.py
Graph/24/: Graph_24.docx  graph_definition.json  graph_task24.py
Graph/27/: Graph_27.docx  graph_task27.json  graph_task27.py  graph_task27.txt
Graph/3/: Graph_3.docx  graph_task3.json  graph_task3.py
Graph/30/: Graph_30.docx  graph_task30.py  graph_task30.txt
Graph/31/: Graph_31.docx  graph_task31.json  graph_task31.py
Graph/32/: Graph_32.docx  graph_task32.py  graph_task32.txt
Graph/33/: Graph_33.docx  graph_task33.py  graph_task33.txt
Graph/34/: Graph_34.docx  graph_task34.json  graph_task34.py
Graph/35/: Graph_35.docx  graph_list.txt  graph_matrix.txt  graph_task35.json  graph_task35.py
Graph/44/: Graph_44.docx  graph_definition.json  graph_task44.py
Graph/45/: Graph_45.docx  graph_task45.py  graph_task45.txt
Graph/50/: Graph_50.docx  graph_task50.json  graph_task50.py  graph_task50.txt
Graph/abc/: graph.py  (+1 more)
Linear/: README.md  deque_pointers.py
Tree/: README.md  left_right_pointer_randomized_bst.py  left_right_pointer_tree.py  table_bst.py  table_randomized_bst.py
tools/: init_task.py  save_to_yadisk.py  test_linear_sorts.py
(+423 files in other folders)
