[tool.poetry]
name = "mirea-ads"
version = "10.2022"
description = "Решение вариантов по дисциплине \"Алгоритмы и структуры данных\" МИРЭА 2020-2022г."
authors = ["Stanislav Lyu. <wallseat@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yadisk = "^1.2.16"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
docxtpl = "^0.16.4"
pillow = "^9.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
