[tool.poetry]
authors = ["Stanislav Lyu. <wallseat@gmail.com>"]
description = "Решение вариантов по дисциплине \"Алгоритмы и структуры данных\" МИРЭА 2020-2023г."
license = "MIT"
name = "mirea-ads"
readme = "README.md"
version = "01.2023"

[tool.poetry.dependencies]
docxtpl = "^0.16.4"
pillow = "^9.3.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pytest = "^7.2.0"
python = ">=3.10,<3.11"
yadisk = "^1.2.16"
sympy = "^1.11.1"
matplotlib = "^3.6.2"
black = "^22.12.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.20.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 110
